cm4all-workshop (6.4) unstable; urgency=low

  * qmqp: fix buffer overflow in netstring header parser
  * spawn: mount `proc` with "hidepid=1,subset=pid"

 --   

cm4all-workshop (6.3) unstable; urgency=low

  * spawn: fix 6.2 regressions

 -- Max Kellermann <mk@cm4all.com>  Thu, 21 Nov 2024 15:48:43 +0100

cm4all-workshop (6.2) unstable; urgency=low

  * spawn: do not log "failed to kill: No such process"
  * translation: add packets CAP_SYS_RESOURCE, CHROOT

 -- Max Kellermann <mk@cm4all.com>  Tue, 12 Nov 2024 12:38:01 +0100

cm4all-workshop (6.1) unstable; urgency=low

  * merge release 5.6
  * reduce HTTP and QMQP delay
  * cron: report spawner errors
  * cron: fix HTTP response data in "cronresults" table
  * cron: report CURL errors
  * cron: limit HTTP requests to 1 minute

 -- Max Kellermann <mk@cm4all.com>  Wed, 10 Jul 2024 14:40:54 +0200

cm4all-workshop (6.0.31) unstable; urgency=low

  * cron: log email notification errors with job id and site name
  * cron: sanitize QMQP error messages when logging them

 -- Max Kellermann <mk@cm4all.com>  Wed, 19 Jun 2024 12:27:14 +0200

cm4all-workshop (6.0.30) unstable; urgency=low

  * control: fix socket deregistration bug after malformed packet

 -- Max Kellermann <mk@cm4all.com>  Sat, 08 Jun 2024 09:27:08 +0200

cm4all-workshop (6.0.29) unstable; urgency=low

  * cron: fix corrupt qrelay responses
  * cron: fix "Unrecognized exception" after QMQP error
  * spawn: create a session cgroup for each cron job

 -- Max Kellermann <mk@cm4all.com>  Tue, 30 Apr 2024 12:14:42 +0200

cm4all-workshop (6.0.28) unstable; urgency=low

  * cron: connect to database only if partition is enabled
  * cron: start multiple pending jobs at a time
  * cron: start the oldest job first
  * cron: add setting "default_email_sender"
  * cron: verify the "notification" email address
  * cron: allow routing notification emails through containerized qrelay
  * spawn: fix bogus ECHILD error message
